--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,3 +71,6 @@ logger.application=DEBUG
 # ~~~~~
 vaadin.myapp.ui = example.MyVaadinUI
 vaadin.myapp.path = /my-vaadin-app
+
+# Cassandra Plugin
+cassandra.default.nodes: ["10.0.0.1", "10.0.0.2"]
