--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,7 +70,12 @@ logger.application=DEBUG
 # Vaadin
 # ~~~~~
 vaadin.myapp.ui = example.MyVaadinUI
-vaadin.myapp.path = /my-vaadin-app
+vaadin.myapp.path = /vaadin
 
 # Cassandra Plugin
-cassandra.default.nodes: ["10.0.0.1", "10.0.0.2"]
+# cassandra.default.nodes: ["10.0.0.1", "10.0.0.2"]
+
+# Play Jongo
+# ~~~~~
+playjongo.uri="mongodb://127.0.0.1:27017/play"
+playjongo.gridfs.enabled=false
