--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,3 +79,10 @@ vaadin.myapp.path = /vaadin
 # ~~~~~
 playjongo.uri="mongodb://127.0.0.1:27017/play"
 playjongo.gridfs.enabled=false
+
+# Play-authenticate plugin
+# ~~~~~
+include "play-authenticate/authenticate.conf"
+include "play-authenticate/easymail.conf"
+include "play-authenticate/smtp.conf"
+
