[Delete] play-authenticate plugin [Add] SecureSocial plugin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,9 +80,7 @@ vaadin.myapp.path = /vaadin
 playjongo.uri="mongodb://127.0.0.1:27017/play"
 playjongo.gridfs.enabled=false
 
-# Play-authenticate plugin
+# Secure Social
 # ~~~~~
-include "play-authenticate/authenticate.conf"
-include "play-authenticate/easymail.conf"
-include "play-authenticate/smtp.conf"
+include "securesocial.conf"
 
