--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -2,8 +2,8 @@ smtp {
 	host=smtp.gmail.com
 	port=587
 	ssl=true
-	user="l.varayut@gmail.com"
-	password=boy14121412
+	user="bookstore.fr@gmail.com"
+	password=ihkosoy'lnv
 	from="noreply@bookstore.com"
 }
 securesocial {
@@ -130,4 +130,20 @@ securesocial {
     	clientSecret="7E29Tk7_PkQj4WritqhG_5oj"
     	scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
     }
+    facebook {
+    	authorizationUrl="https://graph.facebook.com/oauth/authorize"
+    	accessTokenUrl="https://graph.facebook.com/oauth/access_token"
+    	clientId="629439003799475"
+    	clientSecret="0f4a21838aff68325daf2a7ab9d98eea"
+    	# this scope is the minimum SecureSocial requires.  You can add more if required by your app.
+    	scope=email
+    }
+    twitter {
+    	requestTokenUrl="https://twitter.com/oauth/request_token"
+    	accessTokenUrl="https://twitter.com/oauth/access_token"
+    	authorizationUrl="https://twitter.com/oauth/authenticate"
+    	consumerKey="aKe1WocZvrdwBedetsMCJNAOW"
+    	consumerSecret="Fe1P2M2CJEzJReUbHTWlIw8ugtQeAcyGuEG68kq7j2994NvC5W"
+    }
+
 }
