--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -10,19 +10,19 @@ securesocial {
         #
         # If enabled, sets the path to your copy of Bootstrap.css to be used instead of the default one provided by SecureSocial
         #
-        #bootstrapCssPath="your path"
+        # bootstrapCssPath="/webjars/bootstrap/3.1.0/css/bootstrap.min.css"
 
 
         #
         # If enabled, sets the Favicon to display when in SecureSocial pages
         #
-        #faviconPath="your path"
+        faviconPath="images/favicon.png"
 
 
         #
         # If enabled, sets the path to your copy of JQuery to be used instead of the default one provided by SecureSocial
         #
-        #jqueryPath="your path"
+        jqueryPath="javascripts/jquery-1.11.0.min.js"
 
 
         #
