--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,7 +78,7 @@ vaadin.myapp.path = /vaadin
 # Play Jongo
 # ~~~~~
 playjongo.uri="mongodb://127.0.0.1:27017/play"
-playjongo.gridfs.enabled=false
+playjongo.gridfs.enabled=true
 
 # Secure Social
 # ~~~~~
