[Add] display image files from binary [Delete] Vaadin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,8 +69,8 @@ logger.application=DEBUG
 
 # Vaadin
 # ~~~~~
-vaadin.myapp.ui = example.MyVaadinUI
-vaadin.myapp.path = /vaadin
+#vaadin.myapp.ui = example.MyVaadinUI
+#vaadin.myapp.path = /vaadin
 
 # Cassandra Plugin
 # cassandra.default.nodes: ["10.0.0.1", "10.0.0.2"]
