--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -104,7 +104,7 @@ securesocial {
 		#
 	        # The amount of time the session id will remain valid since the last request
 		#
-		idleTimeoutInMinutes=30
+		idleTimeoutInMinutes=300
 
 		#
 		# The amount of time the session id will be valid since the user authenticated.
